Infer G1 full collector when gc details are missing.